--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="My GitHub Page that links to my various projects available on GitHub!">
 </head>
 <body>
-  <div class="responsive">
+  <main class="responsive">
     <div class="row">
       <div class="max">
         <h8>My Resume Website (Made in Blazor)</h8>
@@ -53,6 +53,6 @@
         <img src="https://www.tudi20.dev/pictures/programming-language-logos" alt="GitHub">
       </a>
     </div>
-  </div>
+  </main>
 </body>
 </html>
