--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <i>open_in_new</i>
       </a>
       <a class="button none" href="https://github.com/Tudi20/ResumeApp" target="_blank">
-        <img src="https://www.tudi20.dev/pictures/programming-language-logos" alt="GitHub">
+        <img src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=26 height=25>
       </a>
     </div>
     <div class="row">
@@ -33,7 +33,7 @@
         <h8>HTML5 Canvas partially remade in C</h8>
       </div>
       <a class="button none" href="https://github.com/Tudi20/xcb-canvas" target="_blank">
-        <img src="https://www.tudi20.dev/pictures/programming-language-logos" alt="GitHub">
+        <img src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=26 height=25>
       </a>
     </div>
     <div class="row">
@@ -41,7 +41,7 @@
         <h8>A bad mini-golf game made in OpenGL and C</h8>
       </div>
       <a class="button none" href="https://github.com/Tudi20/computer-graphics" target="_blank">
-        <img src="https://www.tudi20.dev/pictures/programming-language-logos" alt="GitHub">
+        <img src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=26 height=25>
       </a>
     </div>
     <div class="row">
@@ -50,7 +50,7 @@
         <span>I made this for a competetion while I was in primary school!</span>
       </div>
       <a class="button none" href="https://github.com/Tudi20/infotrio-verseny" target="_blank">
-        <img src="https://www.tudi20.dev/pictures/programming-language-logos" alt="GitHub">
+        <img src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=26 height=25>
       </a>
     </div>
   </main>
