--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <base href="/" />
     <link href="https://cdn.jsdelivr.net/npm/beercss@2.3.0/dist/cdn/beer.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/beercss@2.3.0/dist/cdn/beer.min.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/material-dynamic-colors@0.0.10/dist/cdn/material-dynamic-colors.min.js" type="text/javascript"></script>
+    <script src="darkmode.js" text="text/stylesheet"></script>
 
     <meta property="og:title" content="Github Page of Kláben Szabolcs Bence">
     <meta property="og:type" content="profile">
@@ -16,7 +18,8 @@
     <meta property="og:description" content="My GitHub Page that links to my various projects available on GitHub!">
 </head>
 <body>
-  <main class="responsive">
+  <main class="responsive center">
+    <h1>My projects on GitHub!</h1>
     <div class="row">
       <div class="max">
         <h8>My Resume Website (Made in Blazor)</h8>
