--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="My GitHub Page that links to my various projects available on GitHub!">
 </head>
 <body>
-  <main class="responsive center">
+  <main class="responsive center-align">
     <h1>My projects on GitHub!</h1>
     <div class="row">
       <div class="max">
