--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 </head>
 <body>
   <main class="responsive center-align">
-    <h1>My projects on GitHub!</h1>
+    <div class="row">
+        <h1>My projects on GitHub!</h1>
+    </div>
     <div class="row">
       <div class="max">
         <h8>My Resume Website (Made in Blazor)</h8>
