--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <meta property="og:locale" content="en-GB">
     <meta property="og:url" content="https://tudi20.github.io">
     <meta property="og:description" content="My GitHub Page that links to my various projects available on GitHub!">
+    
+    <style>
+        body[class="dark"] img .invert-dark {
+            filter: invert(1);
+        }
+    </style>
 </head>
 <body>
   <main class="responsive center-align">
@@ -30,7 +36,7 @@
         <i>open_in_new</i>
       </a>
       <a class="button none" href="https://github.com/Tudi20/ResumeApp" target="_blank">
-        <img src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=24 height=24>
+        <img class="invert-dark" src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=24 height=24>
       </a>
     </div>
     <div class="row">
@@ -38,7 +44,7 @@
         <h8>HTML5 Canvas partially remade in C</h8>
       </div>
       <a class="button none" href="https://github.com/Tudi20/xcb-canvas" target="_blank">
-        <img src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=24 height=24>
+        <img class="invert-dark" src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=24 height=24>
       </a>
     </div>
     <div class="row">
@@ -46,7 +52,7 @@
         <h8>A bad mini-golf game made in OpenGL and C</h8>
       </div>
       <a class="button none" href="https://github.com/Tudi20/computer-graphics" target="_blank">
-        <img src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=24 height=24>
+        <img class="invert-dark" src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=24 height=24>
       </a>
     </div>
     <div class="row">
@@ -55,7 +61,7 @@
         <span>I made this for a competetion while I was in primary school!</span>
       </div>
       <a class="button none" href="https://github.com/Tudi20/infotrio-verseny" target="_blank">
-        <img src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=24 height=24>
+        <img class="invert-dark" src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=24 height=24>
       </a>
     </div>
   </main>
