--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
     </style>
 </head>
-<body>
+<body onload="SetPrefferedMode()">
   <main class="responsive center-align">
     <div class="row">
         <h1>My projects on GitHub!</h1>
