--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body onload="SetPrefferedMode()">
   <main class="responsive center-align">
-    <div class="row">
+    <div class="row center-align">
         <h1>My projects on GitHub!</h1>
     </div>
     <div class="row">
