Make the `a.button`s more spaced-out

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         body[class="dark"] img.invert-dark {
             filter: invert(1);
         }
+        
+        div.row a.button.none ~ a.button.none {
+        padding: 0 0 0 4rem;
+        }
     </style>
 </head>
 <body onload="SetPrefferedMode()">
