--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div class="row center-align">
         <h1>My projects on GitHub!</h1>
     </div>
+    <div class="large-divider"></div>
     <div class="row">
       <div class="max">
         <h8>My Resume Website (Made in Blazor)</h8>
