Make sure `a.buttons`s are under the divider

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         div.row a.button.none ~ a.button.none {
             padding: 0 0 0 4rem;
         }
+        
+        div.row a.button.none:last-child {
+            margin-right: 8rem !important;   
+        }
     </style>
 </head>
 <body onload="SetPrefferedMode()">
