--- a/index.html
+++ b/index.html
@@ -38,8 +38,20 @@
     </div>
     <div class="large-divider"></div>
     <div class="row">
-      <div class="max">
-        <h6>My Resume Website (Made in Blazor)</h6>
+      <h6>My Resume Website</h6>
+      <div class="max scroll">
+        <a class="chip small-elevate round fill small small-margin">
+            <img class="responsive" src="https://www.tudi20.dev/pictures/programming-language-logos/blazor.png" />
+            <span>Blazor</span>
+        </a>
+        <a class="chip small-elevate round fill small small-margin">
+            <img class="responsive" src="https://www.tudi20.dev/pictures/programming-language-logos/materialdesign.svg" />
+            <span>Material Design</span>
+        </a>
+        <a class="chip small-elevate round fill small small-margin">
+            <img class="responsive" src="https://www.tudi20.dev/pictures/programming-language-logos/csharp.svg" />
+            <span>C#</span>
+        </a>
       </div>
       <a class="button none" href="https://www.tudi20.dev" target="_blank">
         <i>open_in_new</i>
@@ -49,25 +61,36 @@
       </a>
     </div>
     <div class="row">
-      <div class="max">
-        <h6>HTML5 Canvas partially remade in C</h6>
+      <h6>HTML5 Canvas partially remade in C</h6>
+      <div class="max scroll">
+        <a class="chip small-elevate round fill small small-margin">
+            <img class="responsive" src="https://www.tudi20.dev/pictures/programming-language-logos/c.svg" />
+            <span>C</span>
+        </a>
       </div>
       <a class="button none" href="https://github.com/Tudi20/xcb-canvas" target="_blank">
         <img class="invert-dark" src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=24 height=24>
       </a>
     </div>
     <div class="row">
-      <div class="max">
-        <h6>A bad mini-golf game made in OpenGL and C</h6>
+      <h6>A bad mini-golf game made in OpenGL and C</h6>
+      <div class="max scroll">
+        <a class="chip small-elevate round fill small small-margin">
+            <img class="responsive" src="https://www.tudi20.dev/pictures/programming-language-logos/c.svg" />
+            <span>C</span>
+        </a>
       </div>
       <a class="button none" href="https://github.com/Tudi20/computer-graphics" target="_blank">
         <img class="invert-dark" src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=24 height=24>
       </a>
     </div>
     <div class="row">
-      <div class="max">
         <h6>A simple Pascal program</h6>
         <span>I made this for a competetion while I was in primary school!</span>
+      <div class="max scroll">
+          <a class="chip small-elevate round fill small small-margin">
+            <span>Pascal</span>
+        </a>
       </div>
       <a class="button none" href="https://github.com/Tudi20/infotrio-verseny" target="_blank">
         <img class="invert-dark" src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=24 height=24>
