--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body onload="SetPrefferedMode()">
-  <main class="responsive center-align">
+  <main class="responsive middle-align">
     <div class="row center-align">
         <h1>My projects on GitHub!</h1>
     </div>
