--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     </style>
 </head>
 <body onload="SetPrefferedMode()">
-  <main class="responsive middle-align">
+  <main class="responsive">
     <div class="row center-align">
         <h1>My projects on GitHub!</h1>
     </div>
     <div class="large-divider"></div>
-    <div class="row">
+    <div class="row middle-align">
       <h6>My Resume Website</h6>
       <div class="max scroll">
         <a class="chip small-elevate round fill small small-margin">
@@ -60,7 +60,7 @@
         <img class="invert-dark" src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=24 height=24>
       </a>
     </div>
-    <div class="row">
+    <div class="row middle-align">
       <h6>HTML5 Canvas partially remade in C</h6>
       <div class="max scroll">
         <a class="chip small-elevate round fill small small-margin">
@@ -72,7 +72,7 @@
         <img class="invert-dark" src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=24 height=24>
       </a>
     </div>
-    <div class="row">
+    <div class="row middle-align">
       <h6>A bad mini-golf game made in OpenGL and C</h6>
       <div class="max scroll">
         <a class="chip small-elevate round fill small small-margin">
@@ -84,7 +84,7 @@
         <img class="invert-dark" src="https://www.tudi20.dev/pictures/programming-language-logos/github.svg" alt="GitHub" width=24 height=24>
       </a>
     </div>
-    <div class="row">
+    <div class="row middle-align">
         <h6>A simple Pascal program</h6>
         <span>I made this for a competetion while I was in primary school!</span>
       <div class="max scroll">
