--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 </head>
 <body onload="SetPrefferedMode()">
   <main class="responsive">
-    <div class="row center-align">
+    <div class="row">
         <h1>My projects on GitHub!</h1>
     </div>
     <div class="large-divider"></div>
     <div class="row middle-align">
       <h6>My Resume Website</h6>
-      <div class="max scroll">
+      <div class="max">
         <a class="chip small-elevate round fill small small-margin">
             <img class="responsive" src="https://www.tudi20.dev/pictures/programming-language-logos/blazor.png" />
             <span>Blazor</span>
@@ -62,7 +62,7 @@
     </div>
     <div class="row middle-align">
       <h6>HTML5 Canvas partially remade in C</h6>
-      <div class="max scroll">
+      <div class="max">
         <a class="chip small-elevate round fill small small-margin">
             <img class="responsive" src="https://www.tudi20.dev/pictures/programming-language-logos/c.svg" />
             <span>C</span>
@@ -74,7 +74,7 @@
     </div>
     <div class="row middle-align">
       <h6>A bad mini-golf game made in OpenGL and C</h6>
-      <div class="max scroll">
+      <div class="max">
         <a class="chip small-elevate round fill small small-margin">
             <img class="responsive" src="https://www.tudi20.dev/pictures/programming-language-logos/c.svg" />
             <span>C</span>
@@ -87,7 +87,7 @@
     <div class="row middle-align">
         <h6>A simple Pascal program</h6>
         <span>I made this for a competetion while I was in primary school!</span>
-      <div class="max scroll">
+      <div class="max">
           <a class="chip small-elevate round fill small small-margin">
             <span>Pascal</span>
         </a>
