--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
             <img class="responsive" src="https://www.tudi20.dev/pictures/programming-language-logos/csharp.svg" />
             <span>C#</span>
         </a>
+        <a class="chip small-elevate round fill small small-margin">
+            <img class="responsive" src="https://www.tudi20.dev/pictures/programming-language-logos/azure.svg" />
+            <span>Azure</span>
+        </a>
       </div>
       <a class="button none" href="https://www.tudi20.dev" target="_blank">
         <i>open_in_new</i>
